tensorflow 2.0 ready and more efficient training

--- a/create_tfrecords/CreateTFrecords.ipynb
+++ b/create_tfrecords/CreateTFrecords.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,15 +213,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num GPUs Available:  1\n",
-      "Located at:  ['/device:GPU:0']\n"
+      "Num GPUs Available:  4\n",
+      "Located at:  ['/device:GPU:0', '/device:GPU:1', '/device:GPU:2', '/device:GPU:3']\n"
      ]
     }
    ],
