reduced image sizes to 156*156*156

--- a/create_tfrecords/CreateTFrecords.ipynb
+++ b/create_tfrecords/CreateTFrecords.ipynb
@@ -90,8 +90,6 @@
     "\n",
     "labels = labels_slice(labels, ['CN', 'AD', 'EMCI', 'LMCI', 'MCI'])\n",
     "\n",
-    "\n",
-    "\n",
     "labels['new_ind']=labels['Subject']+\"_\"+labels['T1.SERIESID'].astype(str)\n",
     "#labels.loc[labels.Group == 'CN','Group']=0\n",
     "#labels.loc[labels.Group == 'AD','Group']=1\n",
@@ -107,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -216,15 +214,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num GPUs Available:  4\n",
-      "Located at:  ['/device:GPU:0', '/device:GPU:1', '/device:GPU:2', '/device:GPU:3']\n"
+      "Num GPUs Available:  2\n",
+      "Located at:  ['/device:GPU:0', '/device:GPU:1']\n"
      ]
     }
    ],
@@ -241,21 +239,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with_label = np.asarray([name[5:] for name in with_label])\n",
-    "#with_label = with_label[:200]"
+    "with_label = np.asarray([name[5:] for name in with_label])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def normalise_GPU(file_names):\n",
+    "def normalise(file_names):\n",
     "    count = 0\n",
     "    start_time = time.time()\n",
     "    strategy = tf.distribute.MirroredStrategy()\n",
@@ -276,12 +273,12 @@
     "                start_time = time.time()\n",
     "    return min_x, max_x\n",
     "\n",
-    "#min_, max_ = normalise_GPU(with_label)"
+    "#min_, max_ = normalise(with_label)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,14 +326,14 @@
     "        row['ind']= 'No label'\n",
     "        row['label']= 'No label'\n",
     "        row['subject'] = 'No label'\n",
-    "    file_names_  =file_names_.append(row, ignore_index=True)\n",
+    "    file_names_  = file_names_.append(row, ignore_index=True)\n",
     "\n",
     "file_names = file_names_[file_names_['ind']!='No label']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -570,57 +567,50 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>109_S_4380_S377818-T1_T1_brain_mni305.nii</td>\n",
-       "      <td>109_S_4380_377818</td>\n",
-       "      <td>1</td>\n",
-       "      <td>109_S_4380</td>\n",
+       "      <td>020_S_0213_S33112_T1_brain_mni305.nii</td>\n",
+       "      <td>020_S_0213_33112</td>\n",
+       "      <td>2</td>\n",
+       "      <td>020_S_0213</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>067_S_0059_S60702_T1_brain_mni305.nii</td>\n",
-       "      <td>067_S_0059_60702</td>\n",
-       "      <td>0</td>\n",
-       "      <td>067_S_0059</td>\n",
+       "      <td>023_S_0887_S201949_T1_brain_mni305.nii</td>\n",
+       "      <td>023_S_0887_201949</td>\n",
+       "      <td>1</td>\n",
+       "      <td>023_S_0887</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>062_S_0793_S27205_T1_brain_mni305.nii</td>\n",
-       "      <td>062_S_0793_27205</td>\n",
-       "      <td>2</td>\n",
-       "      <td>062_S_0793</td>\n",
+       "      <td>023_S_0376_S13786_T1_brain_mni305.nii</td>\n",
+       "      <td>023_S_0376_13786</td>\n",
+       "      <td>1</td>\n",
+       "      <td>023_S_0376</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>013_S_0699_S18365_T1_brain_mni305.nii</td>\n",
-       "      <td>013_S_0699_18365</td>\n",
-       "      <td>2</td>\n",
-       "      <td>013_S_0699</td>\n",
+       "      <td>033_S_0741_S90102_T1_brain_mni305.nii</td>\n",
+       "      <td>033_S_0741_90102</td>\n",
+       "      <td>0</td>\n",
+       "      <td>033_S_0741</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>941_S_4376_S718162_T1_brain_mni305.nii</td>\n",
-       "      <td>941_S_4376_718162</td>\n",
+       "      <td>022_S_4196_S145144_T1_brain_mni305.nii</td>\n",
+       "      <td>022_S_4196_145144</td>\n",
        "      <td>0</td>\n",
-       "      <td>941_S_4376</td>\n",
+       "      <td>022_S_4196</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                    filename                ind label  \\\n",
-       "0  109_S_4380_S377818-T1_T1_brain_mni305.nii  109_S_4380_377818     1   \n",
-       "1      067_S_0059_S60702_T1_brain_mni305.nii   067_S_0059_60702     0   \n",
-       "2      062_S_0793_S27205_T1_brain_mni305.nii   062_S_0793_27205     2   \n",
-       "3      013_S_0699_S18365_T1_brain_mni305.nii   013_S_0699_18365     2   \n",
-       "4     941_S_4376_S718162_T1_brain_mni305.nii  941_S_4376_718162     0   \n",
-       "\n",
-       "      subject  \n",
-       "0  109_S_4380  \n",
-       "1  067_S_0059  \n",
-       "2  062_S_0793  \n",
-       "3  013_S_0699  \n",
-       "4  941_S_4376  "
+       "                                 filename                ind label     subject\n",
+       "0   020_S_0213_S33112_T1_brain_mni305.nii   020_S_0213_33112     2  020_S_0213\n",
+       "1  023_S_0887_S201949_T1_brain_mni305.nii  023_S_0887_201949     1  023_S_0887\n",
+       "2   023_S_0376_S13786_T1_brain_mni305.nii   023_S_0376_13786     1  023_S_0376\n",
+       "3   033_S_0741_S90102_T1_brain_mni305.nii   033_S_0741_90102     0  033_S_0741\n",
+       "4  022_S_4196_S145144_T1_brain_mni305.nii  022_S_4196_145144     0  022_S_4196"
       ]
      },
      "metadata": {},
@@ -632,7 +622,7 @@
        "(12975, 4)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,14 +649,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(256, 256, 256)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, row in file_names.iterrows():\n",
+    "            filename = row['filename']\n",
+    "            label = int(row['label'])\n",
+    "            name = str.encode(row['ind'])\n",
+    "            image_ = nib.load(rel_path + filename)\n",
+    "            im = image_.get_data()\n",
+    "            print(im.shape)\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_tfrecords(save_filename, file_names, min_, max_):\n",
+    "def write_tfrecords(save_filename, file_names, min_, max_, cut=None):\n",
     "    '''\n",
     "    raveling all three dimensions and normalizing every entry\n",
     "    '''\n",
+    "    \n",
+    "    if cut:\n",
+    "        l_lim = cut[0]\n",
+    "        u_lim = cut[1]\n",
+    "        min_ = np.reshape(min_, [256, 256, 256])\n",
+    "        max_ = np.reshape(min_, [256, 256, 256])\n",
+    "        min_ = min_[l_lim:u_lim, l_lim:u_lim, l_lim:u_lim].ravel()\n",
+    "        max_ = max_[l_lim:u_lim, l_lim:u_lim, l_lim:u_lim].ravel()\n",
     "    i=0\n",
     "    start_time = time.time()\n",
     "    strategy = tf.distribute.MirroredStrategy()\n",
@@ -678,6 +700,8 @@
     "            name = str.encode(row['ind'])\n",
     "            image_ = nib.load(rel_path + filename)\n",
     "            im = image_.get_data()\n",
+    "            if cut:\n",
+    "                im = im[l_lim:u_lim, l_lim:u_lim, l_lim:u_lim]\n",
     "            normalized_im = (im.ravel()-min_)/(max_+0.0001-min_)\n",
     "            feature = {'label': _int64_feature(label),\n",
     "                   'image': _float_feature(normalized_im),\n",
@@ -696,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -704,164 +728,157 @@
      "output_type": "stream",
      "text": [
       "i:  200\n",
-      "--- 1210 seconds ---\n",
+      "--- 401 seconds ---\n",
       "i:  400\n",
-      "--- 2296 seconds ---\n",
+      "--- 787 seconds ---\n",
       "i:  600\n",
-      "--- 3387 seconds ---\n",
+      "--- 1173 seconds ---\n",
       "i:  800\n",
-      "--- 4486 seconds ---\n",
+      "--- 1556 seconds ---\n",
       "i:  1000\n",
-      "--- 5588 seconds ---\n",
+      "--- 1935 seconds ---\n",
       "i:  1200\n",
-      "--- 6684 seconds ---\n",
+      "--- 2319 seconds ---\n",
       "i:  1400\n",
-      "--- 7782 seconds ---\n",
+      "--- 2700 seconds ---\n",
       "i:  1600\n",
-      "--- 8877 seconds ---\n",
+      "--- 3082 seconds ---\n",
       "i:  1800\n",
-      "--- 9962 seconds ---\n",
+      "--- 3460 seconds ---\n",
       "i:  2000\n",
-      "--- 11052 seconds ---\n",
+      "--- 3839 seconds ---\n",
       "i:  2200\n",
-      "--- 12132 seconds ---\n",
+      "--- 4221 seconds ---\n",
       "i:  2400\n",
-      "--- 13220 seconds ---\n",
+      "--- 4604 seconds ---\n",
       "i:  2600\n",
-      "--- 14307 seconds ---\n",
+      "--- 4990 seconds ---\n",
       "i:  2800\n",
-      "--- 15400 seconds ---\n",
+      "--- 5372 seconds ---\n",
       "i:  3000\n",
-      "--- 16490 seconds ---\n",
+      "--- 5755 seconds ---\n",
       "i:  3200\n",
-      "--- 17579 seconds ---\n",
+      "--- 6138 seconds ---\n",
       "i:  3400\n",
-      "--- 18683 seconds ---\n",
+      "--- 6519 seconds ---\n",
       "i:  3600\n",
-      "--- 19789 seconds ---\n",
+      "--- 6902 seconds ---\n",
       "i:  3800\n",
-      "--- 20887 seconds ---\n",
+      "--- 7283 seconds ---\n",
       "i:  4000\n",
-      "--- 21977 seconds ---\n",
+      "--- 7665 seconds ---\n",
       "i:  4200\n",
-      "--- 23073 seconds ---\n",
+      "--- 8047 seconds ---\n",
       "i:  4400\n",
-      "--- 24165 seconds ---\n",
+      "--- 8424 seconds ---\n",
       "i:  4600\n",
-      "--- 25254 seconds ---\n",
+      "--- 8805 seconds ---\n",
       "i:  4800\n",
-      "--- 26349 seconds ---\n",
+      "--- 9185 seconds ---\n",
       "i:  5000\n",
-      "--- 27445 seconds ---\n",
+      "--- 9571 seconds ---\n",
       "i:  5200\n",
-      "--- 28535 seconds ---\n",
+      "--- 9949 seconds ---\n",
       "i:  5400\n",
-      "--- 29629 seconds ---\n",
+      "--- 10332 seconds ---\n",
       "i:  5600\n",
-      "--- 30723 seconds ---\n",
+      "--- 10711 seconds ---\n",
       "i:  5800\n",
-      "--- 31808 seconds ---\n",
+      "--- 11092 seconds ---\n",
       "i:  6000\n",
-      "--- 32897 seconds ---\n",
+      "--- 11467 seconds ---\n",
       "i:  6200\n",
-      "--- 33990 seconds ---\n",
+      "--- 11846 seconds ---\n",
       "i:  6400\n",
-      "--- 35082 seconds ---\n",
+      "--- 12226 seconds ---\n",
       "i:  6600\n",
-      "--- 36172 seconds ---\n",
+      "--- 12605 seconds ---\n",
       "i:  6800\n",
-      "--- 37263 seconds ---\n",
+      "--- 12982 seconds ---\n",
       "i:  7000\n",
-      "--- 38355 seconds ---\n",
+      "--- 13359 seconds ---\n",
       "i:  7200\n",
-      "--- 39445 seconds ---\n",
+      "--- 13734 seconds ---\n",
       "i:  7400\n",
-      "--- 40533 seconds ---\n",
+      "--- 14115 seconds ---\n",
       "i:  7600\n",
-      "--- 41637 seconds ---\n",
+      "--- 14491 seconds ---\n",
       "i:  7800\n",
-      "--- 42735 seconds ---\n",
+      "--- 14867 seconds ---\n",
       "i:  8000\n",
-      "--- 43838 seconds ---\n",
+      "--- 15247 seconds ---\n",
       "i:  8200\n",
-      "--- 44942 seconds ---\n",
+      "--- 15624 seconds ---\n",
       "i:  8400\n",
-      "--- 46039 seconds ---\n",
+      "--- 16002 seconds ---\n",
       "i:  8600\n",
-      "--- 47140 seconds ---\n",
+      "--- 16380 seconds ---\n",
       "i:  8800\n",
-      "--- 48247 seconds ---\n",
+      "--- 16759 seconds ---\n",
       "i:  9000\n",
-      "--- 49351 seconds ---\n",
+      "--- 17135 seconds ---\n",
       "i:  9200\n",
-      "--- 50446 seconds ---\n",
+      "--- 17517 seconds ---\n",
       "i:  9400\n",
-      "--- 51553 seconds ---\n",
+      "--- 17892 seconds ---\n",
       "i:  9600\n",
-      "--- 52659 seconds ---\n",
+      "--- 18267 seconds ---\n",
       "i:  9800\n",
-      "--- 53758 seconds ---\n",
+      "--- 18647 seconds ---\n",
       "i:  10000\n",
-      "--- 54862 seconds ---\n",
+      "--- 19026 seconds ---\n",
       "i:  10200\n",
-      "--- 55969 seconds ---\n",
+      "--- 19402 seconds ---\n",
       "i:  10400\n",
-      "--- 57073 seconds ---\n",
+      "--- 19781 seconds ---\n",
       "i:  10600\n",
-      "--- 58180 seconds ---\n",
+      "--- 20163 seconds ---\n",
       "i:  10800\n",
-      "--- 59290 seconds ---\n",
+      "--- 20541 seconds ---\n",
       "i:  11000\n",
-      "--- 60403 seconds ---\n",
+      "--- 20922 seconds ---\n",
       "i:  11200\n",
-      "--- 61506 seconds ---\n",
+      "--- 21299 seconds ---\n",
       "i:  11400\n",
-      "--- 62609 seconds ---\n",
+      "--- 21681 seconds ---\n",
       "i:  11600\n",
-      "--- 63708 seconds ---\n",
+      "--- 22066 seconds ---\n",
       "i:  11800\n",
-      "--- 64810 seconds ---\n",
+      "--- 22448 seconds ---\n",
       "i:  12000\n",
-      "--- 65912 seconds ---\n",
+      "--- 22829 seconds ---\n",
       "i:  12200\n",
-      "--- 67015 seconds ---\n",
+      "--- 23212 seconds ---\n",
       "i:  12400\n",
-      "--- 68119 seconds ---\n",
+      "--- 23591 seconds ---\n",
       "i:  12600\n",
-      "--- 69223 seconds ---\n",
+      "--- 23968 seconds ---\n",
       "i:  12800\n",
-      "--- 70333 seconds ---\n",
+      "--- 24345 seconds ---\n",
       "i:  200\n",
-      "--- 1077 seconds ---\n",
+      "--- 383 seconds ---\n",
       "i:  400\n",
-      "--- 2160 seconds ---\n",
+      "--- 765 seconds ---\n",
       "i:  600\n",
-      "--- 3231 seconds ---\n",
+      "--- 1145 seconds ---\n",
       "i:  800\n",
-      "--- 4314 seconds ---\n",
+      "--- 1524 seconds ---\n",
       "i:  200\n",
-      "--- 1078 seconds ---\n",
+      "--- 382 seconds ---\n",
       "i:  400\n",
-      "--- 2157 seconds ---\n",
+      "--- 765 seconds ---\n",
       "i:  600\n",
-      "--- 3225 seconds ---\n",
+      "--- 1153 seconds ---\n",
       "i:  800\n",
-      "--- 4305 seconds ---\n"
+      "--- 1531 seconds ---\n"
      ]
     }
    ],
    "source": [
-    "write_tfrecords('../data/training_flat_256_3d.tfrecords', training_file_names_over, min_flat, max_flat)\n",
-    "write_tfrecords('../data/testing_flat_256_3d.tfrecords', testing_file_names, min_flat, max_flat)\n",
-    "write_tfrecords('../data/validation_flat_256_3d.tfrecords', validation_file_names, min_flat, max_flat)"
+    "write_tfrecords('../data/training_flat_156_3d.tfrecords', training_file_names_over, min_flat, max_flat, cut=[50, 206])\n",
+    "write_tfrecords('../data/testing_flat_156_3d.tfrecords', testing_file_names, min_flat, max_flat, cut=[50, 206])\n",
+    "write_tfrecords('../data/validation_flat_156_3d.tfrecords', validation_file_names, min_flat, max_flat, cut=[50, 206])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
